--- a/tijdLijn.html
+++ b/tijdLijn.html
@@ -6,7 +6,7 @@
   	 <meta charset="UTF-8">
 </head>
 <body>  
-<!-- secret -->
+<!-- secret text-->
 
 <div id="tijdlijn">
 	 <img src="images/tijdlijn.png" width="1896">  
